-Tweaks
-------------------------------------------------------------------



-------------------------------------------------------------------
2.5.1:
-UI content revisions
-UI / UX enhancements
-------------------------------------------------------------------



-------------------------------------------------------------------
2.5.2:
-More UI content revisions
-More UI / UX enhancements (including cross browser and mobile compatibility)
-------------------------------------------------------------------



-------------------------------------------------------------------
2.5.3:
-Even more UI content revisions
-Default config revisions
-Semantics
-SSL API config setting
-------------------------------------------------------------------



-------------------------------------------------------------------
2.5.4:
-Proxy authentication compatibility
-Tweaks
-Even more UI content revisions
-------------------------------------------------------------------



-------------------------------------------------------------------
3.00.0:
-Major overhaul fully complete
-Switched to proper semantic versioning (for technical clarity)
-Even more UI content revisions
-------------------------------------------------------------------



-------------------------------------------------------------------
3.01.0:
-Favorite Icon / Start screen image
-------------------------------------------------------------------



-------------------------------------------------------------------
3.02.0:
-Developer maintenance
-New releases link
-------------------------------------------------------------------



-------------------------------------------------------------------
3.03.0:
-Tweaks
-------------------------------------------------------------------



-------------------------------------------------------------------
3.04.0:
-Removed cryptopia exchange API support
-------------------------------------------------------------------





